// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/pr ensurePr should add assignees and reviewers to new PR 1`] = `
Array [
  Array [
    undefined,
    Array [
      "foo",
      "bar",
    ],
  ],
]
`;

exports[`workers/pr ensurePr should add assignees and reviewers to new PR 2`] = `
Array [
  Array [
    undefined,
    Array [
      "baz",
      "boo",
    ],
  ],
]
`;

exports[`workers/pr ensurePr should add note about Pin 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This PR contains the following updates:

| Package | Type | Update | Change | References |
|---|---|---|---|---|
| dummy | devDependencies | pin | \`1.0.0\` -> \`1.1.0\` | [homepage](https://dummy.com), [source](https://github.com/renovateapp/dummy/packages/a), [changelog](https://github.com/renovateapp/dummy/changelog.md) |

:pushpin: **Important**: Renovate will wait until you have merged this Pin PR before creating any *upgrade* PRs for the affected packages. Add the preset \`:preserveSemverRanges\` your config if you instead don't wish to pin dependencies.

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: \\"before 5am\\" in timezone some timezone.

:vertical_traffic_light: **Automerge**: Disabled by config. Please merge this manually once you are satisfied.

:recycle: **Rebasing**: Whenever PR is stale, or if you modify the PR title to begin with \\"\`rebase!\`\\".

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.

---

 - [ ] <!-- renovate-rebase -->If you want to rebase/retry this PR, check this box",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should create PR if success 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This PR contains the following updates:

| Package | Type | Update | Change | References |
|---|---|---|---|---|
| dummy | devDependencies | minor | \`1.0.0\` -> \`1.1.0\` | [homepage](https://dummy.com), [source](https://github.com/renovateapp/dummy/packages/a), [changelog](https://github.com/renovateapp/dummy/changelog.md) |

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: \\"before 5am\\" (UTC).

:vertical_traffic_light: **Automerge**: Enabled.

:recycle: **Rebasing**: Whenever PR becomes conflicted, or if you modify the PR title to begin with \\"\`rebase!\`\\".

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.

---

 - [ ] <!-- renovate-rebase -->If you want to rebase/retry this PR, check this box",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should create group PR 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This PR contains the following updates:

| Package | Type | Update | Change | References |
|---|---|---|---|---|
| dummy | devDependencies | lockFileMaintenance | \`1.0.0\` -> \`1.1.0\` | [homepage](https://dummy.com), [source](https://github.com/renovateapp/dummy/packages/a), [changelog](https://github.com/renovateapp/dummy/changelog.md) |
| a |  |  | \`aaaaaaa\` |  |
| b |  | pin | \`some_new_value@bbbbbbb\` |  |
| c |  |  |  |  |
| d |  | lockFileMaintenance |  |  |

note 1

note 2

:abcd: If you wish to disable git hash updates, add \`\\":disableDigestUpdates\\"\` to the extends array in your config.

:wrench: This Pull Request updates \`package.json\` lock files to use the latest dependency versions.

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

<details>
<summary>renovateapp/dummy</summary>

</details>

---

### Renovate configuration

:date: **Schedule**: At any time (no schedule defined).

:vertical_traffic_light: **Automerge**: Disabled by config. Please merge this manually once you are satisfied.

:recycle: **Rebasing**: Whenever PR becomes conflicted, or if you modify the PR title to begin with \\"\`rebase!\`\\".

:ghost: **Immortal**: This PR will be recreated if closed unmerged. Get [config help](https://github.com/renovatebot/config-help/issues) if that's undesired.

---

 - [ ] <!-- renovate-rebase -->If you want to rebase/retry this PR, check this box",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should create privateRepo PR if success 1`] = `
Array [
  "renovate/dummy-1.x",
  "Update dependency dummy to v1.1.0",
  "This PR contains the following updates:

| Package | Type | Update | Change | References |
|---|---|---|---|---|
| dummy | devDependencies | minor | \`1.0.0\` -> \`1.1.0\` | [homepage](https://dummy.com), [source](https://github.com/renovateapp/dummy/packages/a), [changelog](https://github.com/renovateapp/dummy/changelog.md) |

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: At any time (no schedule defined).

:vertical_traffic_light: **Automerge**: Disabled by config. Please merge this manually once you are satisfied.

:recycle: **Rebasing**: Whenever PR becomes conflicted, or if you modify the PR title to begin with \\"\`rebase!\`\\".

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.

---

 - [ ] <!-- renovate-rebase -->If you want to rebase/retry this PR, check this box",
  Array [],
  false,
  false,
]
`;

exports[`workers/pr ensurePr should return modified existing PR 1`] = `
Object {
  "body": "This PR contains the following updates:

| Package | Type | Update | Change | References |
|---|---|---|---|---|
| dummy | devDependencies | minor | \`1.0.0\` -> \`1.1.0\` | [homepage](https://dummy.com), [source](https://github.com/renovateapp/dummy/packages/a), [changelog](https://github.com/renovateapp/dummy/changelog.md) |

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: \\"before 5am\\" (UTC).

:vertical_traffic_light: **Automerge**: Enabled.

:recycle: **Rebasing**: Whenever PR becomes conflicted, or if you modify the PR title to begin with \\"\`rebase!\`\\".

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.

---

 - [ ] <!-- renovate-rebase -->If you want to rebase/retry this PR, check this box",
  "canRebase": true,
  "displayNumber": "Existing PR",
  "title": "Update dependency dummy to v1.1.0",
}
`;

exports[`workers/pr ensurePr should return modified existing PR title 1`] = `
Object {
  "body": "This PR contains the following updates:

| Package | Type | Update | Change | References |
|---|---|---|---|---|
| dummy | devDependencies | minor | \`1.0.0\` -> \`1.1.0\` | [homepage](https://dummy.com), [source](https://github.com/renovateapp/dummy/packages/a), [changelog](https://github.com/renovateapp/dummy/changelog.md) |

---

### Release Notes

<details>
<summary>renovateapp/dummy</summary>

### [\`v1.1.0\`](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

[Compare Source](https://github.com/renovateapp/dummy/compare/v1.0.0...v1.1.0)

</details>

---

### Renovate configuration

:date: **Schedule**: \\"before 5am\\" (UTC).

:vertical_traffic_light: **Automerge**: Enabled.

:recycle: **Rebasing**: Whenever PR becomes conflicted, or if you modify the PR title to begin with \\"\`rebase!\`\\".

:no_bell: **Ignore**: Close this PR and you won't be reminded about this update again.

---

 - [ ] <!-- renovate-rebase -->If you want to rebase/retry this PR, check this box",
  "canRebase": true,
  "displayNumber": "Existing PR",
  "title": "wrong",
}
`;

exports[`workers/pr ensurePr should return unmodified existing PR 1`] = `Array []`;
